<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/standard_margin"
        tools:context=".MainActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_key"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/standard_margin"
            android:hint="@string/edit_text_key_hint"
            app:layout_constraintEnd_toStartOf="@+id/text_data"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/alpha"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_data"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/standard_margin"
            android:hint="@string/edit_text_data_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_key"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/alpha"
                android:inputType="text"
                android:visibility="visible" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            android:checkedButton="@id/option_insert"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_key">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/option_insert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="@dimen/min_text_height"
                android:text="@string/option_insert"
                android:textAppearance="?attr/textAppearanceBody1" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/option_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:minHeight="@dimen/min_text_height"
                android:text="@string/option_update"
                android:textAppearance="?attr/textAppearanceBody1" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/option_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:minHeight="@dimen/min_text_height"
                android:text="@string/option_delete"
                android:textAppearance="?attr/textAppearanceBody1" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/option_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="@dimen/min_text_height"
                android:text="@string/option_search"
                android:textAppearance="?attr/textAppearanceBody1" />
        </RadioGroup>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            android:gravity="center"
            android:minWidth="144dp"
            android:minHeight="@dimen/min_text_height"
            android:text="@string/button_text"
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_group" />

        <ImageButton
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            android:backgroundTint="@color/red"
            android:gravity="center"
            android:minHeight="@dimen/min_text_height"

            android:src="@drawable/ic_delete"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@id/radio_group" />

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            android:gravity="center"
            android:minHeight="@dimen/min_text_height"
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button"
            tools:text="@string/result" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>